# trs

./: CHANGES.md  README.md  dune-project  trs.opam
.github/workflows/: test.yml
lib/: dune  lexer.mll  parser.mly  trs.ml  trs.mli  types.ml
test/: dune  test_trs.ml
